# segmentation_models

./: .flake8  .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  train.def
notebooks/: brain_mri.ipynb  eurosat.ipynb
scripts/: build_image.sh  train.sh
segmentation/: config.py
segmentation/models/: README.md  __init__.py  attention_unet.py  components.py  trans_unet.py  types.py  unet.py
segmentation/train/: attention_unet.py  utils.py
segmentation/utils/: metrics.py
