[tool.poetry]
name = "segmentation"
version = "0.1.0"
description = "Image segmentation models implemented using Keras"
authors = ["ezrajames <macdonaldezra@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
matplotlib = "^3.4.2"
opencv-python = "^4.5.5"
tensorflow = "^2.8.0"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
pydantic = "^1.9.1"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
tensorboard-plugin-profile = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88


packages = [
    { include = "segmentation" },
]